2015-02-27 Riccardo Mottola <rm@gnu.org>

	* GRImage.h
	* GRImage.m
	Image accessor.

2015-02-27 Riccardo Mottola <rm@gnu.org>

	* GRImage.m
	Encode (and decode) image representation data in description

	* GRDocView.m
	Recognize images in paste ops.

2015-01-18 Riccardo Mottola <rm@gnu.org>

	* GRImage.h
	* GRImage.m
	Add primtive GRImage implementation
    
	* GRDocView.m
	Support for pasting images and generating GRImages
  
2015-01-03 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (initFromData)
	Initialize not only handle points, but also associated rects

2015-01-01 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Remove unused variable.

	* GRText.m
	init string properties only if string not nil

2014-12-28 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	During remakePath recalculate Start/Middle/End

2014-10-12 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.h
	* GRBezierControlPoint.m
	Define Start, Middle, End position and draw handles accordingly

2014-01-19 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (remakePath)
	Detect line segments and rebuild path accordingly.

2014-01-17 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	Initialize all handles to the center point.

2013-12-12 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (copyWithZone)
	release copied control point!

2013-11-24 Riccardo Mottola <rm@gnu.org>

	* GRPathObject.m (copyWithZone)
	Copy all object's properties.

2013-11-15 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
        Save path description as point series and not psdata (allows saving point type for cusps)

2013-11-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	Clean up variable scope.

2013-11-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m (remakePath)
	Simplify to remake path independently of selected control points.

2013-11-13 Riccardo Mottola <rm@gnu.org>

	* GRBezierControlPoint.m
	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	* GRDrawableObject.m